tests/src/frontend/typechecking/invalid/async_block_mutation.sk
async fun asyncMain(): ^void {
  r = mutable Ref<String>("No");
  f = () ->
    async {
      r.!value = ""
    };
  await f();
  print_raw(freeze(r).value)
}

fun main(): void {
  awaitSynchronously(asyncMain())
}
